# internal_probing

./: .gitignore  LICENCE  README.md  dev.sh  pyproject.toml
configs/: test_config.ini
configs/examples/: enrichment_only_example.toml  enrichment_only_new.toml  pep_triviaqa.toml  pep_triviaqa_example.toml  pep_triviaqa_example_load_dataset.toml  pep_triviaqa_load_enriched.toml  probe_triviaqa.toml  se_precomputed.toml  sep_linear_triviaqa.toml
configs/tuning/: batch_size_triviaqa_mistral.toml  convergence_analysis_triviaqa_mistral.toml
data/sep_demo/: params.json
docs/: batch_size_tuning.md  convergence_analysis.md  enrichment_only_mode.md
exp_results/probe_triviaqa/: metrics.json
exp_results/se_precomputed/: metrics.json
notebooks/: pep.ipynb  prompt_probes_gate.ipynb  qwen.ipynb  semantic_entropy.ipynb  semantic_entropy_probes.ipynb  sep_with_framework.ipynb
scripts/: analyze_convergence.py  tune_batch_size.py  visualize_probe_metrics.py
src/: experiment_runner.py
src/activation_extractor/: base.py
src/config/: __init__.py  enums.py  loader.py
src/dataset/: __init__.py  base.py  evaluators.py
src/experiments/: __init__.py  base.py  enrichment_only.py  standard.py
src/model/: __init__.py  base.py  gpt2.py  mistral.py
src/scoring/: __init__.py  base.py  inputs.py  linear_probe.py  precomputed.py  prompt_embedding.py
src/training/: README.md  __init__.py  base.py  io.py  pep_trainer.py  probe_manager.py  utils.py  visualization.py
src/uncertainity_estimation/: base.py  linear_probe.py
tests/: test_experiment_runner.py
(+41 files in other folders)
