[project]
name = "internal-probing"
version = "0.1.0"
description = "Uncertainty estimation for LLMs using internal probing"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
