[project]
name = "internal-probing"
version = "0.1.0"
description = "Uncertainty estimation for LLMs using internal probing"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "datasets>=4.4.1",
    "pandas>=2.3.3",
    "accelerate>=1.12.0",
    "wandb>=0.23.1",
    "tenacity>=9.1.2",
    "openai>=2.13.0",
    "evaluate>=0.4.6",
    "bitsandbytes>=0.49.0",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipywidgets"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
